<resources>
    <string name="facebook_app_id">2190063697958983</string>
    <string name="fb_login_protocol_scheme">fb2190063697958983</string>
    <string name="app_name">Giftshop</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="logout">Logout</string>
    <string name="name">Name</string>
    <string name="tel">Tel</string>
    <string name="last_name">Last name</string>
    <string name="save">Save</string>
    <string name="home">Home</string>
    <string name="product_name">Product name</string>
    <string name="product_detail">Product detail</string>
    <string name="my_product">My Product</string>
    <string name="add_product">Add Product</string>
    <string name="about">About</string>
    <string name="lat">Lat</string>
    <string name="lon">Lon</string>
    <string name="google">Google</string>
    <string name="contact">Contact</string>
    <string name="location">Location</string>
    <string name="facebook">Facebook</string>
    <string name="url">Url</string>
    <string name="line">Line</string>
    <string name="price">Price</string>
    <string name="line_url">Line Url</string>
    <string name="description">Description</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="language">Language</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="select_language">Select Language</string>
    <string name="no_internet_connection">No internet connection !</string>
    <string name="connected">Connected !</string>
    <string name="close">Close</string>
    <string name="_logout">Logout…</string>
    <string name="_remove_image">Remove image?</string>
    <string name="choose_file">Choose file</string>
    <string name="_upload_new_image">Upload new image…</string>
    <string name="_update_database">Update database…</string>
    <string name="_delete_old_image">Delete old image…</string>
    <string name="_get_information">Get information…</string>
    <string name="_loading">Loading…</string>
    <string name="edit_product">Edit Product</string>
    <string name="restart_application">Restart Application?</string>
    <string name="later">Later</string>
    <string name="no_item">No item !!</string>
    <string name="_remove_image_profile">Remove image profile</string>
    <string name="profile_setting">Profile Setting</string>
    <string name="_delete_product">Delete Product ?</string>
    <string name="_get_image_info">Get image info…</string>
    <string name="_delete_database">Delete data base…</string>
    <string name="_delete_image_error">Delete image error</string>
    <string name="_delete_image_complete">Delete image complete</string>
    <string name="_delete_image_temp">Delete image temp…</string>
    <string name="cradit">แอพนี้สร้างขึ้นเพื่อประกอบการศึกษา เท่านั้น</string>
    <string name="coppyright">Copyright©  MENGX 2019</string>
    <string name="line_id">Line ID</string>
    <string name="confirm">Confirm</string>
    <string name="_logout_right">Do you want to log out?</string>
    <string name="_please_add_your_name_before">Please add your name in setting before add product.</string>
    <string name="_please_addimage">Please Add Image.</string>
    <string name="lolem">Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. Donec non enim in turpis pulvinar facilisis. Ut felis. Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus</string>
    <string name="not_registered">Not registered ?</string>
    <string name="create_an_account">Create an account</string>

</resources>
