<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:icon="@drawable/ic_home_24dp"
            android:id="@+id/menu_card_view"
            android:title="@string/home"/>
        <item
            android:icon="@drawable/ic_add_shopping_cart_24dp"
            android:id="@+id/menu_add_product"
            android:title="@string/add_product"/>
        <item
            android:icon="@drawable/ic_shopping_cart_24dp"
            android:id="@+id/menu_my_product"
            android:title="@string/my_product"/>

        <item
            android:icon="@drawable/ic_input_black_24dp"
            android:id="@+id/menu_logout"
            android:title="@string/logout"/>
        <item
            android:icon="@drawable/ic_info_24dp"
            android:id="@+id/menu_bottom_navigator"
            android:title="@string/about"/>
    </group>
</menu>