<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/context_mainactivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ImageView
        android:src="@drawable/ic_logo"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/toolbar"
        android:id="@+id/img_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_below="@id/img_logo"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        app:errorEnabled="true"
        android:hint="@string/email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/e_email"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_below="@id/email"
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        app:errorEnabled="true"
        android:hint="@string/password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/e_password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:id="@+id/btn_layout"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <Button
            android:layout_margin="10dp"
            android:layout_alignParentStart="true"
            android:elevation="4dp"
            android:stateListAnimator="@null"
            android:id="@+id/b_login"
            android:layout_width="145dp"
            android:layout_height="50dp"
            android:background="@drawable/btn_primary"
            android:text="@string/login"
            android:textColor="@color/primaryTextColor" />

        <Button
            android:layout_alignParentEnd="true"
            android:elevation="4dp"
            android:stateListAnimator="@null"
            android:padding="16dp"
            android:layout_margin="10dp"
            android:drawableStart="@drawable/ic_google_24dp"
            android:id="@+id/b_google_login"
            android:layout_width="145dp"
            android:layout_height="50dp"
            android:background="@drawable/btn_google_plus"
            android:text="@string/google"
            android:textColor="@color/primaryTextColor"/>

    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:layout_below="@id/btn_layout"
        android:layout_width="320dp"
        android:layout_height="wrap_content">
        <com.facebook.login.widget.LoginButton
            android:paddingLeft="60dp"
            android:paddingRight="60dp"
            android:id="@+id/b_facebook_login"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            />
        <Button
            android:id="@+id/b_register"
            android:layout_margin="10dp"
            android:elevation="4dp"
            android:stateListAnimator="@null"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/btn_primary"
            android:text="@string/register"
            android:textColor="@color/primaryTextColor" />
    </LinearLayout>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/primaryColor"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:titleTextColor="@color/primaryTextColor" />



</RelativeLayout>