<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:gravity="center_horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/primaryColor"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:titleTextColor="@color/primaryTextColor" />

    <ImageView
        android:src="@drawable/ic_logo"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/toolbar"
        android:id="@+id/img_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"/>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_centerHorizontal="true"
        android:layout_below="@id/img_logo"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:errorEnabled="true"
        android:hint="@string/email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/e_email"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_centerHorizontal="true"
        android:layout_below="@id/email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:errorEnabled="true"
        app:counterEnabled="true"
        app:passwordToggleEnabled="true"
        android:hint="@string/password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/e_password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_centerHorizontal="true"
        android:layout_below="@id/password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/confirm_password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:errorEnabled="true"
        app:counterEnabled="true"
        app:passwordToggleEnabled="true"
        android:hint="@string/confirm_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/e_confirm_password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/b_save"
        android:textColor="@color/primaryTextColor"
        android:background="@color/primaryLightColor"
        android:layout_alignParentBottom="true"
        android:text="@string/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</RelativeLayout>