<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".EditProductActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/primaryColor"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:titleTextColor="@color/primaryTextColor" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="#E4E2E2"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:id="@+id/pick_img_layout"
                android:layout_width="match_parent"
                android:layout_height="200dp">

                <ImageView
                    android:id="@+id/pick_img_btn"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_insert_photo_24dp"
                    android:layout_width="50dp"
                    android:layout_height="50dp"/>

                <LinearLayout
                    android:id="@+id/img_layout"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </LinearLayout>


            </RelativeLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_below="@id/pick_img_layout"
                android:layout_centerHorizontal="true"
                android:id="@+id/product_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/product_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/e_product_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_below="@id/product_name"
                android:layout_centerHorizontal="true"
                android:id="@+id/product_detail"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/product_detail">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/e_product_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/product_tel"
                android:layout_below="@id/product_detail"
                android:layout_centerHorizontal="true"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/tel">

                <com.google.android.material.textfield.TextInputEditText
                    android:maxLength="14"
                    android:id="@+id/e_product_tel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_centerHorizontal="true"
                android:layout_below="@id/product_tel"
                android:layout_width="300dp"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_alignParentStart="true"
                    android:layout_centerHorizontal="true"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/lat">

                    <com.google.android.material.textfield.TextInputEditText
                        android:maxLength="14"
                        android:id="@+id/e_product_lat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_alignParentRight="true"
                    android:layout_centerHorizontal="true"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/lon">
                    <com.google.android.material.textfield.TextInputEditText
                        android:maxLength="14"
                        android:id="@+id/e_product_lon"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>

            </RelativeLayout>

        </RelativeLayout>
    </ScrollView>
    <Button
        android:id="@+id/b_save"
        android:layout_marginTop="-50dp"
        android:text="@string/save"
        android:background="@color/primaryLightColor"
        android:textColor="@color/primaryTextColor"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>
</LinearLayout>